# forkedchatsystem

./: CMakeLists.txt  chatBroadcast.c  chatBroadcast2  chat_log.txt  chat_server.c  chatserver  client  clientChat.c  readme.md  run_clients.sh  server
